k8s/ocp-route-tls.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
  name: apim
  namespace: ml5-openshift
spec:
  host: apim.apps.devocp.firstbank.com.tw
  to:
    kind: Service
    name: tm-svc
    weight: 100
  port:
    targetPort: http-port
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDlTCCAn2gAwIBAgIUU7DFTBt39u/es+JQ5ornqckAXn8wDQYJKoZIhvcNAQEL
[...]
      H/I7RjSG70FB
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDD/0dx9u8gagjq
[...]
      GX9XytkTyB6Gpk1cDZJ1r/U=
      -----END PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
